[package]
name = "panty"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
repository = "https://github.com/anekos/panty"
keywords = ["vim", "gvim", "linux"]
license-file = "GPLv3"
readme = "README.md"
description = "Fast gVim summoner"
# documentation = http://anekos.github.io/panty


[[bin]]
name = "panty"
doc = false

[dependencies]
argparse = "*"
log = "*"
env_logger = "*"
lazy_static = "*"
libc = "*"
unix_socket = "*"
x11 = { version = "*", features = ["xlib", "xinerama"] }
rustc-serialize = "*"
inotify = "*"
ctrlc = { version = "2.0", features = ["termination"] }
