[package]
name = "panty"
version = "0.4.0"
authors = ["anekos <anekos@snca.net>"]
repository = "https://github.com/anekos/panty"
keywords = ["vim", "gvim", "linux"]
license-file = "LICENSE"
readme = "README.md"
description = "Fast gVim summoner"
# documentation = http://anekos.github.io/panty

[[bin]]
name = "panty"
doc = false

[dependencies]
argparse = "0.2"
log = "0.3"
env_logger = "0.3"
lazy_static = "0.2"
libc = "0.2"
unix_socket = "0.5"
x11 = { version = "2.11", features = ["xlib", "xinerama"] }
rustc-serialize = "0.3"
inotify = "0.3"
ctrlc = { version = "2.0", features = ["termination"] }
walkdir = "1.0.3"
rand = "0.3"
